--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Kinobilletter</title>
+    <script src="index.js"></script>
 </head>
+
+
+
 <body>
-<h1>Kjøp kinobilletter</h1>
+    <h1>Kjøp kinobilletter</h1>
+
+        <table>
+            <tr><td>Navn</td><td><input type="text" id="navn"/></td></tr>
+            <tr><td>Adresse</td><td><input type="text" id="adresse"/></td></tr>
+            <tr><td>Telefonnr</td><td><input type="text" id="telefonnr"/></td></tr>
+            <tr><td>E-post</td><td><input type="text" id="epost"/></td></tr>
+            <tr><td><button onclick="bestill()">Kjøp billetter</button></td></tr>
+        </table>
+    <div id="billetter"></div>
+</body>
+</html>
 
 </body>
 </html>
