--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,15 +8,38 @@
 
     <body>
         <h1>Kjøp kinobilletter</h1>
+        <label for="film">Velg film</label>
+        <select id="film" onchange="velgFilm();"> <option selected disabled>Velg din film</option><option>Interstellar</option><option>Ringenes Herre, To tårn</option><option>Zoolander</option></select>
+        <br> <br>
 
+        <label for="antall">Antall: </label>
+        <input type = "text" id="antall" onchange="antall()">
         <table>
-            <tr><td>Navn</td><td><input type="text" id="navn"/></td></tr>
-            <tr><td>Adresse</td><td><input type="text" id="adresse"/></td></tr>
-            <tr><td>Telefonnr</td><td><input type="text" id="telefonnr"/></td></tr>
-            <tr><td>E-post</td><td><input type="text" id="epost"/></td></tr>
+            <tr>
+                <td>Navn</td>
+                <td><input type="text" id="navn"/></td></tr>
+
+            <tr>
+                <td>Adresse</td><td>
+                <input type="text" id="adresse"/>
+            </td></tr>
+            <tr>
+                <td>Telefonnr</td><td>
+                <input type="text" id="telefonnr"/>
+            </td></tr>
+            <tr>
+                <td>E-post</td><td>
+                <input type="text" id="epost"/>
+            </td>
+
+            </tr>
+
             <tr><td><button onclick="bestill()">Kjøp billetter</button></td></tr>
         </table>
-        <div id="billetter"></div>
+        <h2>Alle billetter</h2>
+        <div id="visAlleBilletter"></div>
+        <br>
+        <button onclick="slettBilletter()">Slett billetter</button>
     </body>
 
 </html>
