Ferdigstilt med ReadMe og valideringer, pluss farge på tekst og booleans.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,35 +7,55 @@
 </head>
 
     <body>
-        <h1>Kjøp kinobilletter</h1>
-        <label for="film">Velg film</label>
-        <select id="film" onchange="velgFilm();"> <option selected disabled>Velg din film</option><option>Interstellar</option><option>Ringenes Herre, To tårn</option><option>Zoolander</option></select>
-        <br> <br>
 
-        <label for="antall">Antall: </label>
-        <input type = "text" id="antall" onchange="antall()">
+        <h1>Kjøp kinobilletter</h1>
+        <table>
+            <td><label for="film">Velg film: </label></td>
+            <td><select id="film" onchange="velgFilm();">
+                <option selected disabled>Velg din film</option>
+                <option>Interstellar</option>
+                <option>Ringenes Herre, To tårn</option>
+                <option>Zoolander</option>
+             </select></td><td><div id="feilFilm" style="color:red"></div></td>
+            <br>
+
+            <tr>
+                <td><label for="antall">Antall: </label></td>
+                <td><input type = "text" id="antall" style="width:15px;" onchange="antall()"></td>
+                <td><div id="feilAntall" style="color:red"></div></td>
+            </tr>
+       </table>
+        <br>
+
         <table>
             <tr>
-                <td>Navn</td>
-                <td><input type="text" id="navn"/></td></tr>
+                <td>Fornavn</td>
+                <td><input type="text" id="fornavn"/></td>
+                <td><div id="feilFornavn" style="color:red"></div></td>
+            </tr>
 
             <tr>
-                <td>Adresse</td><td>
-                <input type="text" id="adresse"/>
-            </td></tr>
-            <tr>
-                <td>Telefonnr</td><td>
-                <input type="text" id="telefonnr"/>
-            </td></tr>
-            <tr>
-                <td>E-post</td><td>
-                <input type="text" id="epost"/>
-            </td>
+                <td>Etternavn</td>
+                <td><input type="text" id="etternavn"/></td>
+                <td><div id="feilEtternavn" style="color:red"></div></td>
+            </tr>
 
+            <tr>
+                <td>Telefonnr</td>
+                <td><input type="text" id="telefonnr"/></td>
+                <td><div id="feilTelefonnr" style="color:red"></div></td>
+
+            </tr>
+
+            <tr>
+                <td>E-post</td>
+                <td><input type="text" id="epost"/></td>
+                <td><div id="feilEpost" style="color:red"></div></td>
             </tr>
 
             <tr><td><button onclick="bestill()">Kjøp billetter</button></td></tr>
         </table>
+
         <h2>Alle billetter</h2>
         <div id="visAlleBilletter"></div>
         <br>
